[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Rocket.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Assets/Spaceship_art_pack/Red/mothership_try.png" type="Texture" id=3]
[ext_resource path="res://Assets/Spaceship_art_pack_2/PNG/Effects/star1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Spaceship_art_pack/Background/background.jpg" type="Texture" id=5]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 344.007

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1282, 718.26, 0, 0, 0, 0, 4, 722.26, 0, 0, 0, 0, 2, 2.26028, 0, 0, 0, 0, 1282, 4.26028, 0, 0, 0, 0, 1282, 720.26, 0, 0, 0, 0, 1282, 718.26, 0, 0, 0, 0, 1282, 720.26, 0, 0, 0, 0, 1282, 718.26 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 2.49609, 1.39453 )
texture = ExtResource( 5 )
centered = false

[node name="CPUParticles2D" type="CPUParticles2D" parent="Background"]
position = Vector2( 251.593, 1.43417 )
amount = 100
lifetime = 10.0
draw_order = 1
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 260, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.61
angle = 50.0
angle_random = 1.0
scale_amount = 0.2

[node name="Planet" type="StaticBody2D" parent="."]
position = Vector2( 650, 330 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 2
collision_mask = 4

[node name="Planet" type="Sprite" parent="Planet"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet"]
shape = SubResource( 1 )

[node name="Rocket" parent="." instance=ExtResource( 1 )]
position = Vector2( 120, 278 )

[node name="AsteroidSpawn" type="Path2D" parent="."]
curve = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidSpawn"]
position = Vector2( 1282, 718.26 )
rotation = 3.13847

[node name="SmallSpawn" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BigSpawn" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="BulletIncrease" type="Timer" parent="."]
autostart = true

[connection signal="increase" from="." to="." method="increase_time"]
[connection signal="timeout" from="SmallSpawn" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BigSpawn" to="." method="_on_BigSpawn_timeout"]
